SERVER-11929 MongoS allows chunk moves/splits when config servers inconsistent