src/mongo/s/chunk.cpp
@@ -41,6 +41,7 @@
 #include "mongo/s/chunk_version.h"
 #include "mongo/s/client_info.h"
 #include "mongo/s/config.h"
+#include "mongo/s/config_server_checker_service.h"
 #include "mongo/s/cursors.h"
 #include "mongo/s/grid.h"
 #include "mongo/s/strategy.h"
@@ -385,6 +386,12 @@ namespace mongo {
             // since it nots 100% tcp queue bound
             // this was implicit before since we did a splitVector on the same socket
             ShardConnection::sync();
+
+            if ( !isConfigServerConsistent() ) {
+                 RARELY warning() << "will not perform auto-split because "
+                                  << "config servers are inconsistent" << endl;
+                return false;
+            }
 
             LOG(1) << "about to initiate autosplit: " << *this << " dataWritten: " << _dataWritten << " splitThreshold: " << splitThreshold << endl;
 
